--- a/airbusiness/pom.xml
+++ b/airbusiness/pom.xml
@@ -19,4 +19,11 @@
 		</plugins>
 	</build>
 	<packaging>ejb</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>javaee</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>5</version>
+		</dependency>
+	</dependencies>
 </project>
