--- a/airear/pom.xml
+++ b/airear/pom.xml
@@ -33,7 +33,7 @@
 						</webModule>
 						<ejbModule>
 							<groupId>de.adesso.airadessi</groupId>
-							<artifactId>airbusiness</artifactId>
+							<artifactId>business</artifactId>
 						</ejbModule>
 					</modules>
 					<finalName>air-adessi</finalName>
@@ -42,4 +42,18 @@
 		</plugins>
 	</build>
 	<packaging>ear</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>de.adesso.airadessi</groupId>
+			<artifactId>view</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>de.adesso.airadessi</groupId>
+			<artifactId>business</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>ejb</type>
+		</dependency>
+	</dependencies>
 </project>
