--- a/airpersistence/pom.xml
+++ b/airpersistence/pom.xml
@@ -16,6 +16,13 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ejb-plugin</artifactId>
+				<configuration>
+					<ejbVersion>3.0</ejbVersion>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
   <packaging>ejb</packaging>
