--- a/airview/pom.xml
+++ b/airview/pom.xml
@@ -16,7 +16,17 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				    <version>2.1.1</version>
+				<configuration>
+    				<webXml>WebContent\WEB-INF\web.xml</webXml>        
+  				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<packaging>war</packaging>
+	
+	
 </project>
