--- a/airview/pom.xml
+++ b/airview/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>de.adesso.airadessi</groupId>
-    <artifactId>fluginfo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>view</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>de.adesso.airadessi</groupId>
+		<artifactId>fluginfo</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>view</artifactId>
 	<build>
 		<plugins>
 			<plugin>
@@ -19,14 +20,90 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				    <version>2.1.1</version>
+				<version>2.1.1</version>
 				<configuration>
-    				<webXml>WebContent\WEB-INF\web.xml</webXml>        
-  				</configuration>
+					<webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<packaging>war</packaging>
 	
+	<properties>
+        <org.richfaces.bom.version>4.1.0.Final</org.richfaces.bom.version>
+        <javaee6.web.spec.version>2.0.0.Final</javaee6.web.spec.version>
+	</properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-bom</artifactId>
+                <version>${org.richfaces.bom.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+            	<groupId>org.jboss.spec</groupId>
+            	<artifactId>jboss-javaee-web-6.0</artifactId>
+            	<version>${javaee6.web.spec.version}</version>
+            	<type>pom</type>
+            	<scope>import</scope>
+            </dependency>
+            <dependency>
+            	<groupId>org.jboss.spec</groupId>
+            	<artifactId>jboss-javaee-web-6.0</artifactId>
+            	<version>${javaee6.web.spec.version}</version>
+            	<type>pom</type>
+            	<scope>import</scope>
+            	<optional>false</optional>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 	
+	<dependencies>
+		 <dependency>
+	        <groupId>org.richfaces.ui</groupId>
+	        <artifactId>richfaces-components-ui</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.richfaces.core</groupId>
+	        <artifactId>richfaces-core-impl</artifactId>
+	    </dependency>
+	    <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+        	<groupId>javax.faces</groupId>
+        	<artifactId>javax.faces-api</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>de.adesso.airadessi</groupId>
+        	<artifactId>business</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.jboss.spec.javax.faces</groupId>
+        	<artifactId>jboss-jsf-api_2.0_spec</artifactId>
+        	<scope>provided</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.jboss.spec.javax.faces</groupId>
+        	<artifactId>jboss-jsf-api_2.0_spec</artifactId>
+        	<scope>provided</scope>
+        	<optional>false</optional>
+        </dependency>
+	</dependencies>
 </project>
